--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.softd.biz.springcloudparentdemo</groupId>
-    <artifactId>springcloudproductservice</artifactId>
+    <groupId>com.softd.test.springcloud</groupId>
+    <artifactId>spring-cloud-productservice</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 </project>
